<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/vertical_padding"
    android:paddingLeft="@dimen/horizontal_padding"
    android:paddingRight="@dimen/horizontal_padding"
    android:paddingTop="@dimen/vertical_padding"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="260dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/smart_susu" />

            <ProgressBar
                android:id="@+id/progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorPrimaryDark"
                android:max="100" />

            <TextView
                android:id="@+id/error_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/login_error_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/forgot_password"
                android:textColor="@color/cardview_dark_background"
                android:textSize="@dimen/login_error_text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@mipmap/ic_account_circle"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="@color/text_color" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@mipmap/ic_textbox_password"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="@color/text_color" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <CheckBox
                android:id="@+id/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/remember_me_text"
                android:textColor="@color/text_color" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bottom_margins"
                android:background="@drawable/login_button_background"
                android:clickable="true"
                android:padding="@dimen/vertical_padding"
                android:text="@string/login_text"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/buttons_font_size" />

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@drawable/sign_up_button_background"
                android:clickable="true"
                android:padding="@dimen/vertical_padding"
                android:text="@string/sign_up_text"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/buttons_font_size" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>