<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dashboard_background"
    tools:context=".ResetPasswordActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/depositMoneyAppBar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/background"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:title="Reset Password">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            android:padding="20dp">

            <ProgressBar
                android:id="@+id/progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/colorAccent"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorPrimaryDark"
                android:max="100" />

            <LinearLayout
                android:id="@+id/phone_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verification_note"
                    android:textColor="#000000" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/bottom_margins"
                    android:background="@color/dashboard_background">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/dashboard_background"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <EditText
                            android:id="@+id/customer_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/bottom_margins"
                            android:background="@drawable/input_background"
                            android:hint="@string/phone_number"
                            android:inputType="text|phone"
                            android:padding="15dp"
                            android:textColor="#000000"
                            android:textColorHint="#000000" />

                        <Button
                            android:id="@+id/send_verification_code_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/bottom_margins"
                            android:background="@drawable/sign_up_button_background"
                            android:clickable="true"
                            android:padding="@dimen/vertical_padding"
                            android:text="@string/verification"
                            android:textAllCaps="false"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/buttons_font_size" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/code_area"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/code_text"
                    android:textColor="#000000" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/bottom_margins"
                    android:background="@color/dashboard_background">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/dashboard_background"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <EditText
                            android:id="@+id/verification_pin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/bottom_margins"
                            android:background="@drawable/input_background"
                            android:hint="@string/code"
                            android:inputType="number"
                            android:padding="15dp"
                            android:textColor="#000000"
                            android:textColorHint="#000000" />

                        <Button
                            android:id="@+id/send_verify_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/bottom_margins"
                            android:background="@drawable/sign_up_button_background"
                            android:clickable="true"
                            android:padding="@dimen/vertical_padding"
                            android:text="@string/verify"
                            android:textAllCaps="false"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/buttons_font_size" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/new_password_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_password_hint"
                    android:textColor="#000000" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/bottom_margins"
                    android:background="@color/dashboard_background">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/dashboard_background"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <EditText
                            android:id="@+id/new_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/bottom_margins"
                            android:background="@drawable/input_background"
                            android:hint="@string/new_password"
                            android:inputType="number"
                            android:padding="15dp"
                            android:textColor="#000000"
                            android:textColorHint="#000000" />

                        <EditText
                            android:id="@+id/new_password_confirmed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/bottom_margins"
                            android:background="@drawable/input_background"
                            android:hint="@string/new_password_confirmed"
                            android:inputType="number"
                            android:padding="15dp"
                            android:textColor="#000000"
                            android:textColorHint="#000000" />

                        <Button
                            android:id="@+id/change_password_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/bottom_margins"
                            android:background="@drawable/sign_up_button_background"
                            android:clickable="true"
                            android:padding="@dimen/vertical_padding"
                            android:text="@string/change_password_button_text"
                            android:textAllCaps="false"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/buttons_font_size" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>